fix header image align middle

--- a/src/modules/_navs.scss
+++ b/src/modules/_navs.scss
@@ -17,6 +17,7 @@
       font-size: 12px;
       height: 15px;
       width: 15px;
+      vertical-align: middle;
     }
   }
 }
